--- a/views/admin/layouts/general.html
+++ b/views/admin/layouts/general.html
@@ -50,10 +50,10 @@
                         管理員
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/admin/user/list/">名單</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="/admin/user/list/">使用者名單</a>
+                        <a class="dropdown-item" href="/admin/goods/list/">商品列表</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/admin/user/list/">名單</a>
+                        <a class="dropdown-item" href="/admin/user/list/">管理員名單</a>
                     </div>
                 </li>
                 <li class="nav-item">
