let id = null to client, and fix bugs

--- a/views/admin/datasets/productlist.html
+++ b/views/admin/datasets/productlist.html
@@ -12,15 +12,15 @@
         </thead>
         <tbody>
             {% for item in productlist %}
-            <tr class="item-id-{{ item._id | safe }}">
+            <tr class="item-id-{{ item.fakeID | safe }}">
                 <td>{{ item.name }}</td>
                 <td>{{ item.quentity }}</td>
                 <td>{{ item.draft }}</td>
-                <td><a target="_blank" href="/admin/goods/{{ item._id | safe }}"><button class="btn btn-success"
+                <td><a target="_blank" href="/admin/goods/{{ item.fakeID | safe }}"><button class="btn btn-success"
                             type="button">查看</button></a></td>
-                <td><a target="_blank" href="/admin/goods/update/{{ item._id | safe }}"> <button class="btn btn-warning"
+                <td><a target="_blank" href="/admin/goods/update/{{ item.fakeID | safe }}"> <button class="btn btn-warning"
                             type="button">修改</button></a></td>
-                <td><button class="btn btn-danger del" type="button" data-id="{{ item._id | safe }}">刪除</button></td>
+                <td><button class="btn btn-danger del" type="button" data-id="{{ item.fakeID | safe }}">刪除</button></td>
             </tr>
             {% endfor %}
         </tbody>
