add base64 upload & display

--- a/views/admin/datasets/productDetial.html
+++ b/views/admin/datasets/productDetial.html
@@ -1,5 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
+<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         {% set productCount = productDetial.img_count %}
         {% set productCountAsArray = Array(productCount) %}
@@ -22,7 +21,33 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+</div> -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        {% set productCount = productDetial.img_count %}
+        {% set productCountAsArray = Array(productCount) %}
+        {% for x, y in productCountAsArray %}
+        <li data-target="#carouselExampleIndicators" data-slide-to="{{ x }}"></li>
+        {% endfor %}
+    </ol>
+    <div class="carousel-inner">
+        {% for item in productDetial.base64 %}
+        <div class="carousel-item {% if loop.first %}active{% endif %}">
+            <img class="d-block w-100" src="{{ item }}"  alt="First slide">
+        </div>
+        {% endfor %}
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
+
 <style>
 .carousel-inner > .carousel-item > img {
   /* min-width: 100%; */
@@ -38,9 +63,6 @@
     <dd>{{productDetial.quentity}}</dd>
     <dt>單價</dt>
     <dd>{{productDetial.price}}</dd>
-    <dt>Description 2</dt>
-    <dd>Item 2</dd>
-
     <dt>商品圖片儲存路徑</dt>
     {% for item in productDetial.img %}
     <dd>{{ item }}</dd>
