--- a/views/datasets/productCard.html
+++ b/views/datasets/productCard.html
@@ -2,11 +2,11 @@
 <div class="card-columns">
   {% for item in productCard %}
   <div class="card">
-    <img class="card-img-top" src="{{item.img[0]}}" alt="Card image cap">
+    <img class="card-img-top" src="{{item.base64[0]}}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{item.name}}</h5>
       <p class="card-text">{{item.desp}}</p>
-      <a href="/goods/{{item._id | safe}}" class="btn btn-primary">查看</a>
+      <a href="/goods/{{item.fakeID | safe}}" class="btn btn-primary">查看</a>
     </div>
     <div class="card-footer">
       <small class="text-muted">{{ item.meta.updateAt | date('Y-m-d')}}</small>
