--- a/views/chat2.html
+++ b/views/chat2.html
@@ -17,7 +17,7 @@
     </li>
     <li class="login page">
       <div class="form">
-        <h3 class="title">What's your nickname?</h3>
+        <h3 class="title">請輸入暱稱</h3>
         <input class="usernameInput" type="text" maxlength="14" />
       </div>
     </li>
@@ -257,7 +257,9 @@ $(function() {
   });
 
   // Socket events
-
+  // socket.broadcast.emit('',)  => define display all user
+  // socket.on('',); => define display current page
+  // when the client emits 'add user', this listens and executes
   // Whenever the server emits 'login', log the login message
   socket.on('login', (data) => {
     connected = true;
