--- a/views/datasets/productCard.html
+++ b/views/datasets/productCard.html
@@ -5,7 +5,7 @@
     <img class="card-img-top" src="{{item.base64[0]}}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{item.name}}</h5>
-      <p class="card-text">{{item.desp}}</p>
+      <p class="card-text">NT$ {{item.price}}</p>
       <a href="/goods/{{item.fakeID | safe}}" class="btn btn-primary">查看</a>
     </div>
     <div class="card-footer">
