add socket even.witch for online test

--- a/views/chat2.html
+++ b/views/chat2.html
@@ -19,6 +19,7 @@
       <div class="form">
         <h3 class="title">請輸入暱稱</h3>
         <input class="usernameInput" type="text" maxlength="14" />
+        <button class="usernameSubmit" class="inputMessage btn btn-lg btn-primary btn-block" type="submit" onClick="$loginPage.click();">提交</button>
       </div>
     </li>
   </ul>
@@ -43,6 +44,7 @@ $(function() {
   // Initialize variables
   var $window = $(window);
   var $usernameInput = $('.usernameInput'); // Input for username
+  var $usernameSubmit = $('.usernameSubmit'); // Input for 提交
   var $messages = $('.messages'); // Messages area
   var $inputMessage = $('.inputMessage'); // Input message input box
 
@@ -229,7 +231,7 @@ $(function() {
       $currentInput.focus();
     }
     // When the client hits ENTER on their keyboard
-    if (event.which === 13) {
+    if (event.which == 13 || event.which == 190 || event.which == 0) {
       if (username) {
         sendMessage();
         socket.emit('stop typing');
