--- a/views/chat2.html
+++ b/views/chat2.html
@@ -24,7 +24,7 @@
       <div class="form">
         <h3 class="title">請輸入暱稱</h3>
         <input class="usernameInput" type="text" maxlength="14" />
-        <td><button class=" usernameSubmit btn btn-success del" type="button" onclick="clickRadio();">提交</button></td>
+        <td><button class=" usernameSubmit btn btn-success del" type="button">提交</button></td>
       </div>
     </li>
   </ul>
@@ -245,16 +245,16 @@
         }
       }
     });
-    clickRadio = function () {
-      if (username) {
-        alert("you click the button");
-        sendMessage();
-        socket.emit('stop typing');
-        typing = false;
-      } else {
-        setUsername();
-      }
-    }
+    // clickRadio = function () {
+    //   if (username) {
+    //     alert("you click the button");
+    //     sendMessage();
+    //     socket.emit('stop typing');
+    //     typing = false;
+    //   } else {
+    //     setUsername();
+    //   }
+    // }
 
     //test
     // $(document).ready(function () {
@@ -271,6 +271,21 @@
     // $inputMessage.on('input', () => {
     //   updateTyping();
     // });
+    
+    $(document).ready(function () {
+          $('.del').bind("click touchstart", function(){
+            if (username) {
+              sendMessage();
+              socket.emit('stop typing');
+              typing = false;
+            } else {
+              setUsername();
+            }
+          })
+      })
+    $inputMessage.on('input', () => {
+      updateTyping();
+    });
 
     // Click events
 
