chat test with jquery .bind(click touchstart,()=>);

--- a/views/chat2.html
+++ b/views/chat2.html
@@ -283,9 +283,13 @@
             }
           })
       })
-    $inputMessage.on('input', () => {
+    $inputMessage.bind('input', () => {
       updateTyping();
     });
+
+    // $inputMessage.on('input', () => {
+    //   updateTyping();
+    // });
 
     // Click events
 
